Динамический вывод регионов и их количества для страниц, фильтров и селекторов. regions теперь передаётся во все шаблоны, селекторы по району полностью динамические.

--- a/static/css/build.css
+++ b/static/css/build.css
@@ -5974,6 +5974,7 @@ Brandbar
   margin-left: 20px;
 }
 
+
 .regions-switcher:first-child {
   margin-left: 0;
 }
@@ -6786,7 +6787,7 @@ Menu
 }
 
 .region {
-  margin-top: 20px;
+  margin: 30px;
 }
 
 .region:first-child {
