Выполнены миграции: drop all, initial schema, import data. Проверено наличие объектов в БД.

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
     <meta name="turbolinks-cache-control" content="no-cache">
     <link rel="stylesheet" href="/css/build.css">
     <link rel="stylesheet" href="/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="/css/region-content.css">
     <script src="/js/build.js"></script>
     <script src="/js/build-noncritical.js" defer></script>
     <style>
