--- a/templates/regions.html
+++ b/templates/regions.html
@@ -18,7 +18,7 @@
                     <ul>
                         {% for region in regions %}
                         <li>
-                            <a href="/region/{{ region.id }}">
+                            <a href="/regions/{{ region.id }}">
                                 <span class="link">{{ region.name }}</span>&nbsp;<span class="color-muted-strong font-smaller">({{ region.count }})</span>
                             </a>
                         </li>
