--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
         .skip-to-main-content:focus { transform: translate(-50%, 0); }
     </style>
 </head>
-<body class="w-loginbar page-homepage page-object">
+<body class="w-loginbar page-homepage">
     <a class="skip-to-main-content js-skip-to-content" href="#main">
         Перейти к основному контенту
     </a>
