--- a/templates/object.html
+++ b/templates/object.html
@@ -340,17 +340,15 @@
 
 </div>
 
-
 <div class="footer footer--absolute touch-focused disable-prevent-link-clicks">
     <div class="copyright">
-        <a href="//web.archive.org/web/20240910073152/https://vk.com/pereval.online" target="_blank"
+        <a href="https://vk.com/pereval.online" target="_blank"
             class="social-icon social-icon--vk tooltip tooltipstered tooltip-inited"><i class="fab fa-vk"></i></a> ©
-        2024 Перевал.Online. Просим указывать ссылку на <a
-            href="https://web.archive.org/web/20240910073152/https://pereval.online/">pereval.online</a> при
+        2025 Перевал.Online. Просим указывать ссылку на <a
+            href="https://pereval.online/">pereval.online</a> при
         использовании материалов сайта.
     </div>
 </div>
 <div class="footer-replace"></div>
-
 
 {% endblock %}
