--- a/templates/region.html
+++ b/templates/region.html
@@ -998,16 +998,15 @@
         </div>
 </div>
 
-
 <div class="footer footer--absolute touch-focused disable-prevent-link-clicks">
         <div class="copyright">
-                <a href="https://vk.com/pereval.online" target="_blank"
-                        class="social-icon social-icon--vk tooltip tooltipstered tooltip-inited"><i
-                                class="fab fa-vk"></i></a> © 2025 Перевал.Online. Просим указывать ссылку на <a
-                        href="https://pereval.online/">pereval.online</a> при
-                использовании материалов сайта.
+            <a href="https://vk.com/pereval.online" target="_blank"
+                class="social-icon social-icon--vk tooltip tooltipstered tooltip-inited"><i class="fab fa-vk"></i></a> ©
+            2025 Перевал.Online. Просим указывать ссылку на <a
+                href="https://pereval.online/">pereval.online</a> при
+            использовании материалов сайта.
         </div>
-</div>
-<div class="footer-replace"></div>
+    </div>
+    <div class="footer-replace"></div>
 
 {% endblock %}
