--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,47 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Поиск</h1>
-<p>Здесь будет форма и результаты поиска.</p>
+<div class="object__tabbed object__tabbed--hstat object__block object__block--grey-light" id="search-objects">
+    <h1>
+        Найденные объекты
+    </h1>
+    <div class="object__tabbed-content">
+        <div class="object__tabbed-list object__tabbed-list--columns object__tabbed-list--type-1">
+            {% if objects.len() == 0 %}
+                <div class="object__tabbed-item color-muted">Нет объектов по вашему запросу</div>
+            {% else %}
+                {% for obj in objects %}
+                <div class="object__tabbed-item">
+                    <div class="sobject-wrapper sobject-wrapper--oneline sobject-wrapper--w-hover sobject-wrapper--w-gradient">
+                        <div class="sobject" data-id="{{ obj.id }}">
+                            <a href="/objects/{{ obj.id }}" class="sobject__link">{{ obj.name }}</a>
+                            <span class="sobject__params">
+                                {% if obj.height.is_some() %}({{ obj.height.as_ref().unwrap() }} м){% endif %}
+                                {% if obj.latitude.is_some() %}
+                                    {% if obj.longitude.is_some() %}
+                                        <i class="fas fa-map-marker-alt js-sobject-marker tooltip tooltip-notouch tooltipstered tooltip-inited" data-title="Есть координаты"></i>
+                                    {% endif %}
+                                {% endif %}
+                                {% if obj.reports_count > 0 %}
+                                    <i class="far fa-file-alt tooltip tooltip-notouch tooltipstered tooltip-inited" data-title="{{ obj.reports_count }} отчётов"><sup> {{ obj.reports_count }}</sup></i>
+                                {% endif %}
+                            </span>
+                        </div>
+                        <div class="sobject-nbsp">&nbsp;</div>
+                    </div>
+                </div>
+                {% endfor %}
+            {% endif %}
+        </div>
+    </div>
+</div>
+<div class="footer footer--absolute touch-focused disable-prevent-link-clicks">
+    <div class="copyright">
+        <a href="https://vk.com/pereval.online" target="_blank"
+            class="social-icon social-icon--vk tooltip tooltipstered tooltip-inited"><i class="fab fa-vk"></i></a> ©
+        2025 Перевал.Online. Просим указывать ссылку на <a
+            href="https://pereval.online/">pereval.online</a> при
+        использовании материалов сайта.
+    </div>
+</div>
+<div class="footer-replace"></div>
 {% endblock %} 
