chore: update .gitignore and project files

--- a/templates/aside.html
+++ b/templates/aside.html
@@ -6,7 +6,7 @@
                     <a href="/" class="logo"><span class="logo__inner">Перевал <span class="logo_2line">Online</span></span></a>
                 </div>
                 <div class="brandbar__cell">
-                    <a href="/regions" class="regions-switcher tooltip tooltip-notouch" title=""><i class="fas fa-globe-americas"></i></a>
+                    <a href="/regions" class="regions-switcher tooltip tooltip-notouch" data-title="Показать все районы" data-tooltipster='{"side": "bottom", "theme": "tooltipster-sidetip"}'><i class="fas fa-globe-americas"></i></a>
                     <div class="search-switcher js-search-switcher tablet-show-inline-block"><i class="fa fa-search"></i></div>
                     <div class="menu-switcher js-menu-switcher"><span></span><span></span></div>
                 </div>
