--- a/templates/object.html
+++ b/templates/object.html
@@ -155,7 +155,7 @@
                 </div>
 
                 <div class="object__map map-expanded-container compensate-for-scrollbar">
-                    <div class="map js-map js-map-on-scroll-observer-inited js-map-on-scroll-loaded" data-zoom="14"
+                    <div class="map js-map" data-zoom="14"
                         data-center="43.32561,42.67434" data-object-id="23150"></div>
                 </div>
             </div>
