--- a/templates/regions.html
+++ b/templates/regions.html
@@ -1,13 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<style>
-.content {
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-bottom: 50px;
-    padding-top: 30px;
-}
-</style>
+
 <div class="object__block object__block--nomargin object__block--marginbneg">
     
     <div class="region">
@@ -29,4 +22,15 @@
         </div>
     </div>
 </div>
+
+<div class="footer footer--absolute touch-focused disable-prevent-link-clicks">
+    <div class="copyright">
+        <a href="https://vk.com/pereval.online" target="_blank"
+            class="social-icon social-icon--vk tooltip tooltipstered tooltip-inited"><i class="fab fa-vk"></i></a> ©
+        2025 Перевал.Online. Просим указывать ссылку на <a
+            href="https://pereval.online/">pereval.online</a> при
+        использовании материалов сайта.
+    </div>
+</div>
+<div class="footer-replace"></div>
 {% endblock %} 
