--- a/templates/base.html
+++ b/templates/base.html
@@ -1,34 +1,71 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Перевал.Online &mdash; каталог перевалов, вершин, ледников</title>
     <meta name="description" content="Перевалы и вершины на карте с описанием. Удобный поиск и каталог.">
-    <meta property="og:description" content="Перевалы и вершины на карте с описанием. Удобный поиск и каталог."/>
-    <meta property="og:locale" content="ru_RU"/>
-    <meta property="og:title" content="Перевал.Online"/>
-    <meta property="og:site_name" content="Перевал.Online"/>
-    <meta property="og:image" content="img/homepage-1024.jpg"/>
-    <meta name="twitter:description" content="Перевалы и вершины на карте с описанием. Удобный поиск и каталог."/>
+    <meta property="og:description" content="Перевалы и вершины на карте с описанием. Удобный поиск и каталог." />
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="og:title" content="Перевал.Online" />
+    <meta property="og:site_name" content="Перевал.Online" />
+    <meta property="og:image" content="img/homepage-1024.jpg" />
+    <meta name="twitter:description" content="Перевалы и вершины на карте с описанием. Удобный поиск и каталог." />
     <meta name="csrf-token" content="">
     <meta name="turbolinks-cache-control" content="no-cache">
     <link rel="stylesheet" href="/css/build.css">
+    <link rel="stylesheet" href="/css/build-noncritical.css">
     <link rel="stylesheet" href="/css/fontawesome-all.min.css">
     <link rel="stylesheet" href="/css/region-content.css">
     <script src="/js/build.js"></script>
     <script src="/js/build-noncritical.js" defer></script>
     <style>
-        body { scroll-behavior: smooth; }
-        .tab-pane.active { pointer-events: auto; visibility: visible; }
-        .tab-pane { pointer-events: none; visibility: hidden; }
-        *:focus-visible { outline: 2px solid #000; outline-offset: 3px; outline-style: revert; }
-        .tabs a:focus-visible, .sobject-wrapper--oneline .sobject a:focus-visible { outline-offset: -1px; }
-        .skip-to-main-content { position: fixed; z-index: 10; top: 0; left: 50%; transform: translate(-50%, -100%); background: #fff; padding: 10px 15px; border-radius: 0 0 8px 8px; text-decoration-thickness: from-font; transition: transform 0.3s; }
-        .skip-to-main-content:focus { transform: translate(-50%, 0); }
+        body {
+            scroll-behavior: smooth;
+        }
+
+        .tab-pane.active {
+            pointer-events: auto;
+            visibility: visible;
+        }
+
+        .tab-pane {
+            pointer-events: none;
+            visibility: hidden;
+        }
+
+        *:focus-visible {
+            outline: 2px solid #000;
+            outline-offset: 3px;
+            outline-style: revert;
+        }
+
+        .tabs a:focus-visible,
+        .sobject-wrapper--oneline .sobject a:focus-visible {
+            outline-offset: -1px;
+        }
+
+        .skip-to-main-content {
+            position: fixed;
+            z-index: 10;
+            top: 0;
+            left: 50%;
+            transform: translate(-50%, -100%);
+            background: #fff;
+            padding: 10px 15px;
+            border-radius: 0 0 8px 8px;
+            text-decoration-thickness: from-font;
+            transition: transform 0.3s;
+        }
+
+        .skip-to-main-content:focus {
+            transform: translate(-50%, 0);
+        }
     </style>
 </head>
+
 <body class="w-loginbar {% block body_class %}page-homepage{% endblock %}">
     <a class="skip-to-main-content js-skip-to-content" href="#main">
         Перейти к основному контенту
@@ -40,5 +77,140 @@
         </main>
     </div>
     <!-- футер и скрипты -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            function loadYmapsAndInit() {
+                console.log('loadYmapsAndInit called');
+                if (typeof ymaps === "undefined") {
+                    var script = document.createElement('script');
+                    script.src = "https://api-maps.yandex.ru/2.1/?apikey=21d18f5a-d30f-4cd5-ba7b-1f8aa0a40912&lang=ru_RU";
+                    script.onload = function () {
+                        if (typeof map_init === "function") {
+                            map_init();
+                        }
+                    };
+                    document.head.appendChild(script);
+                } else {
+                    if (typeof map_init === "function") {
+                        map_init();
+                    }
+                }
+            }
+            loadYmapsAndInit();
+        });
+    </script>
+    <script type="text/x-tmpl" id="tmpl-map-controls">
+{% raw %}
+        <div class="map-controls">
+            <div class="map-control map-control--expand js-map-expand"><i class="fa fa-expand"></i><i class="fa fa-compress"></i></div>
+            <div class="map-control map-control--settings tooltip tooltip-popover tooltip-popover-right map-control-tooltip" data-tooltip-content="#map-settings" data-tooltipster='{"side": "bottom"}'>
+                <i class="fa fa-cog"></i>
+                <div class="map-control__icon"></div>
+                <div class="map-control__tooltip tooltip tooltip-notouch" data-title="Настройки карты" data-tooltipster='{"side": "left"}'></div>
+                <div class="hidden">
+                    <div id="map-settings">
+                        <div class="checkboxes">
+                            <div class="checkbox-wrapper">
+                                <label class="checkbox checkbox-plain-js">
+                                    <input class="js-cookie-set js-map-objects-update" data-update-event-type="change" data-cookie="{&quot;expires&quot;: 525600}" name="mapSettingsShowName" type="checkbox" value="1">
+                                    <span class="checkbox__icon"></span>
+                                    показывать названия
+                                </label>
+                            </div>
+                            <div class="checkbox-wrapper">
+                                <label class="checkbox checkbox-plain-js">
+                                    <input class="js-cookie-set js-map-objects-update" data-update-event-type="change" data-cookie="{&quot;expires&quot;: 525600}" name="mapSettingsShowParams" type="checkbox" value="1">
+                                    <span class="checkbox__icon"></span>
+                                    показывать категорию и высоту
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="map-control map-control--zoom-in js-map-zoom-in"><i class="fa fa-plus"></i></div>
+            <div class="map-control map-control--zoom-out js-map-zoom-out"><i class="fa fa-minus"></i></div>
+            <div class="map-control map-control--find-me js-map-find-me">
+                <i class="far fa-dot-circle"></i>
+                <div class="map-control__tooltip tooltip tooltip-notouch" data-title="Найти, где я" data-tooltipster='{"side": "left"}'></div>
+            </div>
+            <div class="map-control map-control--type tooltip tooltip-popover map-control-tooltip" data-tooltip-content="#map-type-menu" data-tooltipster='{"side": "top"}'>
+                <i class="fa fa-map"></i>
+                <div class="map-control__icon"></div>
+                <div class="map-control__tooltip tooltip tooltip-notouch" data-title="Тип карты" data-tooltipster='{"side": "right"}'></div>
+                <div class="hidden">
+                    <nav class="menu-list menu-list--btns menu-list--on-map js-map-type" id="map-type-menu">
+                        <ul>
+                            <li><a href="#" class="tooltip-closest-hide" data-value="yandex#hybrid"><i class="icon-yandex"></i>Яндекс</a></li>
+                            <li><a href="#" class="tooltip-closest-hide" data-value="google#map"><i class="icon-google"></i>Google</a></li>
+                            <li><a href="#" class="tooltip-closest-hide" data-value="bing#map"><i class="icon-bing"></i>Bing</a></li>
+                            <li><a href="#" class="tooltip-closest-hide" data-value="osm_topo#map"><i class="icon-osm"></i>Open Street TopoMap</a></li>
+                            <li><a href="#" class="tooltip-closest-hide" data-value="osm#map"><i class="icon-osm"></i>Open Street Map</a></li>
+                            <li><a href="#" class="tooltip-closest-hide" data-value="genshtab#map"><i class="icon-serp-molot"></i>Карты Генштаба СССР</a></li>
+                            <li><a href="#" class="tooltip-closest-hide" data-value="ggc#map"><i class="icon-isobar"></i>Карты ГосГисЦентра</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="map-crosshair"></div>
+            <div class="map-latlng js-copy tooltip tooltip-notouch" title="Копировать координаты центра" data-tooltipster='{"side": "top"}'><span class="map-latlng__value map-latlng-value"></span></div>
+            <div class="map-control map-control--search js-map-search">
+                <i class="fa fa-search"></i>
+                <div class="map-control__tooltip tooltip" data-title="Найти на карте" data-tooltipster='{"side": "right", "trigger": "custom", "triggerOpen": { "mouseenter": true, "touchstart": false }, "triggerClose": { "mouseleave": true, "originClick": false, "touchleave": false }}'></div>
+            </div>
+            <div class="map-search">
+                <div class="textfield-wrapper">
+                    <input class="textfield textfield--after-hide-if-reset js-autocomplete" placeholder=" " autocomplete="off" data-autocomplete-lookup-function="mapSearchLookup" data-autocomplete-param-name="q" data-autocomplete-auto-select-first="true" data-autocomplete-preserve-input="true" data-autocomplete-show-on-map="true" name="name" type="text">
+                    <span class="textfield-placeholder">Найти на карте</span>
+                    <span class="textfield-reset"></span>
+                    <span class="textfield-after pointer-events-none"><i class="fa fa-search"></i></span>
+                </div>
+            </div>
+        </div>
+{% endraw %}
+    </script>
+    <script type="text/x-tmpl" id="tmpl-map-marker">
+{% raw %}
+        <div class="object-marker {% if !properties.tmpl.object.quantity %} object-marker--pin {% if properties.tmpl.object.is_active %}object-marker--pin-large{% endif %} object-marker--type-{{ properties.tmpl.object.type_id }} object-marker--{{ properties.tmpl.object.marker_class }} {% if properties.tmpl.object.area_class %}object-marker--{{ properties.tmpl.object.area_class }}{% endif %} {% if properties.tmpl.object.complexity_rate != None %}object-marker--complexity-{{ properties.tmpl.object.complexity_rate }} tooltip{% endif %} {% else %} object-marker--cluster{% endif %}"{% if !properties.tmpl.object.quantity %} data-tooltipster='{"side": "bottom", "interactive": true, "distance": 0, "trackerInterval": 15, "trackOrigin": true, "theme": "tooltipster-default tooltipster-marker-hint"}' data-object-id='{{properties.tmpl.object.id}}' data-title="{{ properties.tmpl.object.content }}"{% endif %}>
+
+            {% if properties.tmpl.object.quantity %}
+            <div class="object-marker__cluster-name object-marker__cluster-name--length-{{ properties.tmpl.object.quantity.toString().length }}">{{ properties.tmpl.object.quantity }}</div>
+            {% endif %}
+
+            <div class="object-marker__bg"></div>
+            <div class="object-marker__icon"></div>
+
+            {% if properties.tmpl.sticker %}
+            <div class="object-marker__sticker">{{ properties.tmpl.sticker }}</div>
+            {% endif %}
+
+        </div>
+{% endraw %}
+    </script>
+    <script type="text/x-tmpl" id="tmpl-map-pmarker">
+{% raw %}
+        <div class="object-pmarker object-pmarker--{{ properties.tmpl.type }}" data-tooltipster='{"side": "bottom", "interactive": true, "distance": 10, "theme": "tooltipster-default tooltipster-marker-hint"}' data-title="{{ properties.tmpl.content }}">
+            <div class="object-pmarker__icon">
+                <svg class="icon icon--{{ properties.tmpl.type }}">
+                    <use xlink:href="#icon-{{ properties.tmpl.type }}"></use>
+                </svg>
+            </div>
+        {% if properties.tmpl.sticker %}
+        <div class="object-pmarker__sticker">{{ properties.tmpl.sticker }}</div>
+            {% endif %}
+        </div>
+{% endraw %}
+    </script>
+    <script type="text/x-tmpl" id="tmpl-map-multitouch-required">
+{% raw %}
+        <div class="map-multitouch-required">Перемещать карту<br> можно двумя пальцами</div>
+{% endraw %}
+    </script>
+    <script type="text/x-tmpl" id="tmpl-map-marker-accuracy">
+{% raw %}
+        <div class="object-marker object-marker--accuracy"></div>
+{% endraw %}
+    </script>
 </body>
-</html> 
+
+</html>
