--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,26 @@
     <div class="content__inner">
 
         <div class="map-wrapper map-wrapper--fullheight map-wrapper--homepage map-expanded-container overflow-hidden">
+            <div class="map-controls active">
+                <div class="map-control map-control--type tooltip tooltip-popover" data-tooltip-content="#map-type-menu" data-tooltipster='{"side": "top"}'>
+                    <i class="fa fa-map"></i>
+                    <div class="map-control__icon"></div>
+                    <div class="map-control__tooltip tooltip tooltip-notouch" data-title="Тип карты" data-tooltipster='{"side": "right"}'></div>
+                    <div class="hidden">
+                        <nav class="menu-list menu-list--btns menu-list--on-map js-map-type" id="map-type-menu">
+                            <ul>
+                                <li><a href="#" class="tooltip-closest-hide" data-value="yandex#hybrid"><i class="icon-yandex"></i>Яндекс</a></li>
+                                <li><a href="#" class="tooltip-closest-hide" data-value="google#map"><i class="icon-google"></i>Google</a></li>
+                                <li><a href="#" class="tooltip-closest-hide" data-value="bing#map"><i class="icon-bing"></i>Bing</a></li>
+                                <li><a href="#" class="tooltip-closest-hide" data-value="osm_topo#map"><i class="icon-osm"></i>Open Street TopoMap</a></li>
+                                <li><a href="#" class="tooltip-closest-hide" data-value="osm#map"><i class="icon-osm"></i>Open Street Map</a></li>
+                                <li><a href="#" class="tooltip-closest-hide" data-value="genshtab#map"><i class="icon-serp-molot"></i>Карты Генштаба СССР</a></li>
+                                <li><a href="#" class="tooltip-closest-hide" data-value="ggc#map"><i class="icon-isobar"></i>Карты ГосГисЦентра</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
             <div class="map js-map"
                 data-bounds="[[&quot;27.702500&quot;,&quot;6.705830&quot;],[&quot;69.991892&quot;,&quot;161.915537&quot;]]">
             </div>
@@ -92,4 +112,73 @@
     </div>
 </div>
 <div class="footer-replace"></div>
+
+<script type="text/x-tmpl" id="tmpl-map-controls">
+    <div class="map-controls">
+        <div class="map-control map-control--expand js-map-expand"><i class="fa fa-expand"></i><i class="fa fa-compress"></i></div>
+        <div class="map-control map-control--settings tooltip tooltip-popover tooltip-popover-right" data-tooltip-content="#map-settings" data-tooltipster='{"side": "bottom"}'>
+            <i class="fa fa-cog"></i>
+            <div class="map-control__icon"></div>
+            <div class="map-control__tooltip tooltip tooltip-notouch" data-title="Настройки карты" data-tooltipster='{"side": "left"}'></div>
+            <div class="hidden">
+                <div id="map-settings">
+                    <div class="checkboxes">
+                        <div class="checkbox-wrapper">
+                            <label class="checkbox checkbox-plain-js">
+                                <input class="js-cookie-set js-map-objects-update" data-update-event-type="change" data-cookie="{&quot;expires&quot;: 525600}" name="mapSettingsShowName" type="checkbox" value="1">
+                                <span class="checkbox__icon"></span>
+                                показывать названия
+                            </label>
+                        </div>
+                        <div class="checkbox-wrapper">
+                            <label class="checkbox checkbox-plain-js">
+                                <input class="js-cookie-set js-map-objects-update" data-update-event-type="change" data-cookie="{&quot;expires&quot;: 525600}" name="mapSettingsShowParams" type="checkbox" value="1">
+                                <span class="checkbox__icon"></span>
+                                показывать категорию и высоту
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="map-control map-control--zoom-in js-map-zoom-in"><i class="fa fa-plus"></i></div>
+        <div class="map-control map-control--zoom-out js-map-zoom-out"><i class="fa fa-minus"></i></div>
+        <div class="map-control map-control--find-me js-map-find-me">
+            <i class="far fa-dot-circle"></i>
+            <div class="map-control__tooltip tooltip tooltip-notouch" data-title="Найти, где я" data-tooltipster='{"side": "left"}'></div>
+        </div>
+        <div class="map-control map-control--type tooltip tooltip-popover" data-tooltip-content="#map-type-menu" data-tooltipster='{"side": "top"}'>
+            <i class="fa fa-map"></i>
+            <div class="map-control__icon"></div>
+            <div class="map-control__tooltip tooltip tooltip-notouch" data-title="Тип карты" data-tooltipster='{"side": "right"}'></div>
+            <div class="hidden">
+                <nav class="menu-list menu-list--btns menu-list--on-map js-map-type" id="map-type-menu">
+                    <ul>
+                        <li><a href="#" class="tooltip-closest-hide" data-value="yandex#hybrid"><i class="icon-yandex"></i>Яндекс</a></li>
+                        <li><a href="#" class="tooltip-closest-hide" data-value="google#map"><i class="icon-google"></i>Google</a></li>
+                        <li><a href="#" class="tooltip-closest-hide" data-value="bing#map"><i class="icon-bing"></i>Bing</a></li>
+                        <li><a href="#" class="tooltip-closest-hide" data-value="osm_topo#map"><i class="icon-osm"></i>Open Street TopoMap</a></li>
+                        <li><a href="#" class="tooltip-closest-hide" data-value="osm#map"><i class="icon-osm"></i>Open Street Map</a></li>
+                        <li><a href="#" class="tooltip-closest-hide" data-value="genshtab#map"><i class="icon-serp-molot"></i>Карты Генштаба СССР</a></li>
+                        <li><a href="#" class="tooltip-closest-hide" data-value="ggc#map"><i class="icon-isobar"></i>Карты ГосГисЦентра</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="map-crosshair"></div>
+        <div class="map-latlng js-copy tooltip tooltip-notouch" title="Копировать координаты центра" data-tooltipster='{"side": "top"}'><span class="map-latlng__value map-latlng-value"></span></div>
+        <div class="map-control map-control--search js-map-search">
+            <i class="fa fa-search"></i>
+            <div class="map-control__tooltip tooltip" data-title="Найти на карте" data-tooltipster='{"side": "right", "trigger": "custom", "triggerOpen": { "mouseenter": true, "touchstart": false }, "triggerClose": { "mouseleave": true, "originClick": false, "touchleave": false }}'></div>
+        </div>
+        <div class="map-search">
+            <div class="textfield-wrapper">
+                <input class="textfield textfield--after-hide-if-reset js-autocomplete" placeholder=" " autocomplete="off" data-autocomplete-lookup-function="mapSearchLookup" data-autocomplete-param-name="q" data-autocomplete-auto-select-first="true" data-autocomplete-preserve-input="true" data-autocomplete-show-on-map="true" name="name" type="text">
+                <span class="textfield-placeholder">Найти на карте</span>
+                <span class="textfield-reset"></span>
+                <span class="textfield-after pointer-events-none"><i class="fa fa-search"></i></span>
+            </div>
+        </div>
+    </div>
+</script>
 {% endblock %}
